--- a/Profile-verified.html
+++ b/Profile-verified.html
@@ -155,12 +155,12 @@
         margin-right: auto;
       }
     }
+
     .upload-preview {
-  pointer-events: none;
-}
+      pointer-events: none;
+    }
   </style>
 </head>
-
 <body id="profileBody">
 
   <div class="header-banner">
@@ -193,27 +193,12 @@
     <label for="instagram">Link Instagram (optional)</label>
     <input type="text" id="instagram" placeholder="@yourhandle" />
   </div>
-    <div class="section-label">Basic Info</div>
 
-  <div class="field">
-    <label for="name">Name</label>
-    <input type="text" id="name" placeholder="First & Last Name" />
-  </div>
+  <div class="section-label">Basic Info</div>
 
-  <div class="field">
-    <label for="age">Age</label>
-    <select id="age">
-      <option disabled selected>Select your age</option>
-    </select>
-  </div>
-
-  <div class="field">
-    <label for="height">Height</label>
-    <select id="height">
-      <option disabled selected>Select your height</option>
-    </select>
-  </div>
-
+  <div class="field"><label for="name">Name</label><input type="text" id="name" placeholder="First & Last Name" /></div>
+  <div class="field"><label for="age">Age</label><select id="age"><option disabled selected>Select your age</option></select></div>
+  <div class="field"><label for="height">Height</label><select id="height"><option disabled selected>Select your height</option></select></div>
   <div class="field">
     <label for="orientation">Sexual Orientation</label>
     <select id="orientation">
@@ -302,8 +287,7 @@
       <option value="let_it_evolve">Let it evolve</option>
     </select>
   </div>
-
-  <div class="field">
+    <div class="field">
     <label>Open to Sugar Dynamic?</label>
     <select id="sugarDynamic">
       <option value="" disabled selected>Select your preference</option>
@@ -333,76 +317,22 @@
     <label for="phone">Phone Number</label>
     <input type="tel" id="phone" placeholder="e.g. 555-123-4567" />
   </div>
-    <div class="divider"></div>
+
+  <div class="divider"></div>
   <div class="section-label">Lifestyle</div>
 
-  <div class="field">
-    <label>Do you drink alcohol?</label>
-    <select id="drinks">
-      <option value="" disabled selected>Select your preference</option>
-      <option value="yes">Yes</option>
-      <option value="no">No</option>
-    </select>
-  </div>
-
-  <div class="field">
-    <label>Do you smoke cigarettes/vape?</label>
-    <select id="smokes">
-      <option value="" disabled selected>Select your preference</option>
-      <option value="yes">Yes</option>
-      <option value="no">No</option>
-    </select>
-  </div>
-
-  <div class="field">
-    <label>Do you smoke weed?</label>
-    <select id="weed">
-      <option value="" disabled selected>Select your preference</option>
-      <option value="yes">Yes</option>
-      <option value="no">No</option>
-    </select>
-  </div>
-
-  <div class="field">
-    <label>Do you use drugs?</label>
-    <select id="drugs">
-      <option value="" disabled selected>Select your preference</option>
-      <option value="yes">Yes</option>
-      <option value="no">No</option>
-    </select>
-  </div>
+  <div class="field"><label>Do you drink alcohol?</label><select id="drinks"><option value="" disabled selected>Select your preference</option><option value="yes">Yes</option><option value="no">No</option></select></div>
+  <div class="field"><label>Do you smoke cigarettes/vape?</label><select id="smokes"><option value="" disabled selected>Select your preference</option><option value="yes">Yes</option><option value="no">No</option></select></div>
+  <div class="field"><label>Do you smoke weed?</label><select id="weed"><option value="" disabled selected>Select your preference</option><option value="yes">Yes</option><option value="no">No</option></select></div>
+  <div class="field"><label>Do you use drugs?</label><select id="drugs"><option value="" disabled selected>Select your preference</option><option value="yes">Yes</option><option value="no">No</option></select></div>
 
   <div class="divider"></div>
   <div class="section-label">Beliefs & Values</div>
 
-  <div class="field">
-    <label>Do you have children?</label>
-    <select id="hasKids">
-      <option value="" disabled selected>Select your preference</option>
-      <option value="yes">Yes</option>
-      <option value="no">No</option>
-    </select>
-  </div>
-
-  <div class="field">
-    <label>Would you like to have children?</label>
-    <select id="wantsKids">
-      <option value="" disabled selected>Select your preference</option>
-      <option value="yes">Yes</option>
-      <option value="no">No</option>
-    </select>
-  </div>
-
-  <div class="field">
-    <label for="job">Job Title</label>
-    <input type="text" id="job" placeholder="Enter job title" />
-  </div>
-
-  <div class="field">
-    <label for="education">Education</label>
-    <input type="text" id="education" placeholder="School name" />
-  </div>
-
+  <div class="field"><label>Do you have children?</label><select id="hasKids"><option value="" disabled selected>Select your preference</option><option value="yes">Yes</option><option value="no">No</option></select></div>
+  <div class="field"><label>Would you like to have children?</label><select id="wantsKids"><option value="" disabled selected>Select your preference</option><option value="yes">Yes</option><option value="no">No</option></select></div>
+  <div class="field"><label for="job">Job Title</label><input type="text" id="job" placeholder="Enter job title" /></div>
+  <div class="field"><label for="education">Education</label><input type="text" id="education" placeholder="School name" /></div>
   <div class="field">
     <label>Religion</label>
     <select id="religion">
@@ -416,7 +346,6 @@
       <option value="other">Other</option>
     </select>
   </div>
-
   <div class="field">
     <label>Only show my religion to others with same religion?</label>
     <select id="showReligionMatchOnly">
@@ -425,7 +354,6 @@
       <option value="no">No</option>
     </select>
   </div>
-
   <div class="field">
     <label>Political Views</label>
     <select id="politics">
@@ -449,7 +377,6 @@
       <option value="no">No</option>
     </select>
   </div>
-
   <div class="field">
     <label>Get notified when someone checks you out?</label>
     <select id="notifyChecksYouOut">
@@ -457,7 +384,6 @@
       <option value="no">No</option>
     </select>
   </div>
-
   <div class="field">
     <label>Allow messages from:</label>
     <select id="allowMessagesFrom">
@@ -466,7 +392,6 @@
       <option value="both">Both</option>
     </select>
   </div>
-
   <div class="field">
     <label>Show profile to:</label>
     <select id="visibility">
@@ -488,208 +413,124 @@
       cursor: pointer;
     ">Save Profile</button>
   </div>
+
   <script>
-document.addEventListener("DOMContentLoaded", function () {
-  // Set archetype and background color
-  const stored = localStorage.getItem("archetype") || "Mood Multiplier";
-  const slugToTitle = {
-    "devoted_darling": "Devoted Darling",
-    "mood_multiplier": "Mood Multiplier",
-    "tender_protector": "Tender Protector",
-    "heatwave": "Heatwave",
-    "promiscuous_plaything": "Promiscuous Plaything",
-    "generous_giver": "Generous Giver",
-    "bedroom_adventurer": "Bedroom Adventurer",
-    "charmer_in_charge": "Charmer in Charge",
-    "punish_me": "Punish Me",
-    "provoker": "Provoker",
-    "dungeon_master": "Dungeon Master",
-    "claimed_and_trained": "Claimed & Trained"
-  };
-  const archetype = slugToTitle[stored] || stored;
-  const roomMap = {
-    "Tender Protector": "blue", "Devoted Darling": "blue", "Mood Multiplier": "blue", "Heatwave": "blue",
-    "Promiscuous Plaything": "green", "Generous Giver": "green", "Bedroom Adventurer": "green", "Charmer in Charge": "green",
-    "Dungeon Master": "red", "Provoker": "red", "Punish Me": "red", "Claimed & Trained": "red"
-  };
-  const formatSlug = (name) => name === "Claimed & Trained" ? "claimed_and_trained" : name.toLowerCase().replace(/[^a-z0-9]+/g, "_");
+    document.addEventListener("DOMContentLoaded", function () {
+      const stored = localStorage.getItem("archetype") || "Mood Multiplier";
+      const slugToTitle = {
+        "devoted_darling": "Devoted Darling",
+        "mood_multiplier": "Mood Multiplier",
+        "tender_protector": "Tender Protector",
+        "heatwave": "Heatwave",
+        "promiscuous_plaything": "Promiscuous Plaything",
+        "generous_giver": "Generous Giver",
+        "bedroom_adventurer": "Bedroom Adventurer",
+        "charmer_in_charge": "Charmer in Charge",
+        "punish_me": "Punish Me",
+        "provoker": "Provoker",
+        "dungeon_master": "Dungeon Master",
+        "claimed_and_trained": "Claimed & Trained"
+      };
+      const roomMap = {
+        "Tender Protector": "blue", "Devoted Darling": "blue", "Mood Multiplier": "blue", "Heatwave": "blue",
+        "Promiscuous Plaything": "green", "Generous Giver": "green", "Bedroom Adventurer": "green", "Charmer in Charge": "green",
+        "Dungeon Master": "red", "Provoker": "red", "Punish Me": "red", "Claimed & Trained": "red"
+      };
+      const formatSlug = (name) => name === "Claimed & Trained" ? "claimed_and_trained" : name.toLowerCase().replace(/[^a-z0-9]+/g, "_");
 
-  document.body.classList.add(roomMap[archetype]);
-  document.getElementById("archetypeLink").textContent = archetype;
-  document.getElementById("blueprintLink").href = `/premium/erotic-blueprint_${formatSlug(archetype)}.html`;
+      document.body.classList.add(roomMap[slugToTitle[stored]]);
+      document.getElementById("archetypeName").textContent = slugToTitle[stored];
+      document.getElementById("blueprintLink").href = `/premium/erotic-blueprint_${formatSlug(slugToTitle[stored])}.html`;
 
-  // Progress indicator
-  const circle = document.getElementById("progressCircle");
-  if (circle) circle.textContent = "33%";
-
-  // Age Dropdown
-  const ageSelect = document.getElementById("age");
-  if (ageSelect) {
-    for (let i = 18; i <= 80; i++) {
-      const opt = document.createElement("option");
-      opt.value = i;
-      opt.textContent = i;
-      ageSelect.appendChild(opt);
-    }
-  }
-
-  // Height Dropdown
-  const heightSelect = document.getElementById("height");
-  if (heightSelect) {
-    for (let ft = 4; ft <= 7; ft++) {
-      for (let inch = 0; inch < 12; inch++) {
-        if (ft === 7 && inch > 0) continue;
-        const label = `${ft}'${inch}"`;
+      const ageSelect = document.getElementById("age");
+      for (let i = 18; i <= 80; i++) {
         const opt = document.createElement("option");
-        opt.value = label;
-        opt.textContent = label;
-        heightSelect.appendChild(opt);
+        opt.value = i;
+        opt.textContent = i;
+        ageSelect.appendChild(opt);
       }
+
+      const heightSelect = document.getElementById("height");
+      for (let ft = 4; ft <= 7; ft++) {
+        for (let inch = 0; inch < 12; inch++) {
+          if (ft === 7 && inch > 0) continue;
+          const label = `${ft}'${inch}"`;
+          const opt = document.createElement("option");
+          opt.value = label;
+          opt.textContent = label;
+          heightSelect.appendChild(opt);
+        }
+      }
+
+      document.getElementById("sugarDynamic").value = "";
+      document.getElementById("threesome").value = "";
+    });
+
+    function handlePhotoUpload(event, index) {
+      const file = event.target.files[0];
+      if (!file) return;
+
+      const reader = new FileReader();
+      reader.onload = function(e) {
+        const photoUpload = event.target.closest('.photo-upload');
+        photoUpload.innerHTML = '';
+
+        const img = document.createElement('img');
+        img.src = e.target.result;
+        img.style.width = '100%';
+        img.style.height = '100%';
+        img.style.objectFit = 'cover';
+        img.style.borderRadius = '6px';
+        photoUpload.appendChild(img);
+
+        const deleteBtn = document.createElement('button');
+        deleteBtn.innerHTML = '×';
+        deleteBtn.style.position = 'absolute';
+        deleteBtn.style.top = '5px';
+        deleteBtn.style.right = '5px';
+        deleteBtn.style.width = '20px';
+        deleteBtn.style.height = '20px';
+        deleteBtn.style.borderRadius = '50%';
+        deleteBtn.style.border = 'none';
+        deleteBtn.style.background = 'rgba(0,0,0,0.7)';
+        deleteBtn.style.color = 'white';
+        deleteBtn.style.cursor = 'pointer';
+        deleteBtn.style.fontSize = '14px';
+        deleteBtn.style.display = 'flex';
+        deleteBtn.style.alignItems = 'center';
+        deleteBtn.style.justifyContent = 'center';
+
+        deleteBtn.onclick = function(e) {
+          e.preventDefault();
+          e.stopPropagation();
+          photoUpload.innerHTML = `
+            <span class="plus">+</span>
+            ${index === 0 ? '<span>Main Photo</span>' : ''}
+            <input type="file" accept="image/*" onchange="handlePhotoUpload(event, ${index})">
+          `;
+          if (index === 0) photoUpload.classList.add('required');
+        };
+
+        photoUpload.appendChild(deleteBtn);
+        photoUpload.style.position = 'relative';
+        if (index === 0) photoUpload.classList.remove('required');
+      };
+
+      reader.readAsDataURL(file);
     }
-  }
 
-  // Fix sugarDynamic default
-  const sugarSelect = document.getElementById("sugarDynamic");
-  if (sugarSelect) sugarSelect.value = "";
-
-  const threesomeSelect = document.getElementById("threesome");
-  if (threesomeSelect) threesomeSelect.value = "";
-  // Save profile → redirect
-  window.saveProfile = function () {
-    const email = prompt("Enter your email:");
-    const phone = prompt("Enter your phone number:");
-    if (!email || !phone) {
-      alert("Email and phone number are required.");
-      return;
+    function saveProfile() {
+      const email = prompt("Enter your email:");
+      const phone = prompt("Enter your phone number:");
+      if (!email || !phone) {
+        alert("Email and phone number are required.");
+        return;
+      }
+      localStorage.setItem("userEmail", email);
+      localStorage.setItem("userPhone", phone);
+      alert("Profile saved! Redirecting to map...");
+      window.location.href = "/map.html";
     }
-    // Optionally save to localStorage for now
-    localStorage.setItem("userEmail", email);
-    localStorage.setItem("userPhone", phone);
-    alert("Profile saved! Redirecting to map...");
-    window.location.href = "/map.html";
-  };
-});
-<script>
-document.addEventListener("DOMContentLoaded", function () {
-  const stored = localStorage.getItem("archetype") || "Mood Multiplier";
-  const slugToTitle = {
-    "devoted_darling": "Devoted Darling",
-    "mood_multiplier": "Mood Multiplier",
-    "tender_protector": "Tender Protector",
-    "heatwave": "Heatwave",
-    "promiscuous_plaything": "Promiscuous Plaything",
-    "generous_giver": "Generous Giver",
-    "bedroom_adventurer": "Bedroom Adventurer",
-    "charmer_in_charge": "Charmer in Charge",
-    "punish_me": "Punish Me",
-    "provoker": "Provoker",
-    "dungeon_master": "Dungeon Master",
-    "claimed_and_trained": "Claimed & Trained"
-  };
-  const archetype = slugToTitle[stored] || stored;
-  const roomMap = {
-    "Tender Protector": "blue", "Devoted Darling": "blue", "Mood Multiplier": "blue", "Heatwave": "blue",
-    "Promiscuous Plaything": "green", "Generous Giver": "green", "Bedroom Adventurer": "green", "Charmer in Charge": "green",
-    "Dungeon Master": "red", "Provoker": "red", "Punish Me": "red", "Claimed & Trained": "red"
-  };
-  const formatSlug = (name) => name === "Claimed & Trained" ? "claimed_and_trained" : name.toLowerCase().replace(/[^a-z0-9]+/g, "_");
-
-  document.body.classList.add(roomMap[archetype]);
-  document.getElementById("blueprintLink").href = `/premium/erotic-blueprint_${formatSlug(archetype)}.html`;
-
-  // Populate age dropdown
-  const ageSelect = document.getElementById("age");
-  for (let i = 18; i <= 80; i++) {
-    const opt = document.createElement("option");
-    opt.value = i;
-    opt.textContent = i;
-    ageSelect.appendChild(opt);
-  }
-
-  // Populate height dropdown
-  const heightSelect = document.getElementById("height");
-  for (let ft = 4; ft <= 7; ft++) {
-    for (let inch = 0; inch < 12; inch++) {
-      if (ft === 7 && inch > 0) continue;
-      const label = `${ft}'${inch}"`;
-      const opt = document.createElement("option");
-      opt.value = label;
-      opt.textContent = label;
-      heightSelect.appendChild(opt);
-    }
-  }
-
-  // Ensure dropdown defaults are blank
-  document.getElementById("sugarDynamic").value = "";
-  document.getElementById("threesome").value = "";
-});
-// ✅ Save profile → redirect
-function saveProfile() {
-  const email = prompt("Enter your email:");
-  const phone = prompt("Enter your phone number:");
-  if (!email || !phone) {
-    alert("Email and phone number are required.");
-    return;
-  }
-  localStorage.setItem("userEmail", email);
-  localStorage.setItem("userPhone", phone);
-  alert("Profile saved! Redirecting to map...");
-  window.location.href = "/map.html";
-}
-</script>
+  </script>
 </body>
-<script>
-function handlePhotoUpload(event, index) {
-  const file = event.target.files[0];
-  if (!file) return;
-
-  const reader = new FileReader();
-  reader.onload = function(e) {
-    const photoUpload = event.target.closest('.photo-upload');
-    photoUpload.innerHTML = '';
-
-    const img = document.createElement('img');
-    img.src = e.target.result;
-    img.style.width = '100%';
-    img.style.height = '100%';
-    img.style.objectFit = 'cover';
-    img.style.borderRadius = '6px';
-    photoUpload.appendChild(img);
-
-    const deleteBtn = document.createElement('button');
-    deleteBtn.innerHTML = '×';
-    deleteBtn.style.position = 'absolute';
-    deleteBtn.style.top = '5px';
-    deleteBtn.style.right = '5px';
-    deleteBtn.style.width = '20px';
-    deleteBtn.style.height = '20px';
-    deleteBtn.style.borderRadius = '50%';
-    deleteBtn.style.border = 'none';
-    deleteBtn.style.background = 'rgba(0,0,0,0.7)';
-    deleteBtn.style.color = 'white';
-    deleteBtn.style.cursor = 'pointer';
-    deleteBtn.style.fontSize = '14px';
-    deleteBtn.style.display = 'flex';
-    deleteBtn.style.alignItems = 'center';
-    deleteBtn.style.justifyContent = 'center';
-
-    deleteBtn.onclick = function(e) {
-      e.preventDefault();
-      e.stopPropagation();
-      photoUpload.innerHTML = `
-        <span class="plus">+</span>
-        ${index === 0 ? '<span>Main Photo</span>' : ''}
-        <input type="file" accept="image/*" onchange="handlePhotoUpload(event, ${index})">
-      `;
-      if (index === 0) photoUpload.classList.add('required');
-    };
-
-    photoUpload.appendChild(deleteBtn);
-    photoUpload.style.position = 'relative';
-    if (index === 0) photoUpload.classList.remove('required');
-  };
-
-  reader.readAsDataURL(file);
-}
-</script>
 </html>
