--- a/Profile-verified.html
+++ b/Profile-verified.html
@@ -255,12 +255,24 @@
     <select id="tyle">
       <option value="" disabled selected>Select your preference</option>
       <option value="tall">Tall</option>
+      <option value="short">Short</option>
       <option value="confident">Confident & funny</option>
+      <option value="smart">Smart & sophisticated</option>
+      <option value="extroverted">Extroverted & friendly</option>
+      <option value="introverted">Introverted & thoughtful</option>
+      <option value="athletic">Athletic & physically active </option>
+      <option value="organize">Organized & orderly</option>
+      <option value="silly">silly & fun</option>
+      <option value="Thin">Thin & lean</option>
+      <option value="tan">Tan</option>
       <option value="brunette">Brunette</option>
       <option value="blonde">Blonde</option>
       <option value="latin">Latin</option>
       <option value="asian">Asian</option>
       <option value="black">Black</option>
+      <option value="indian">Indian</option>
+      <option value="middle">Middle Eastern</option>
+      
       <option value="prefer">Prefer not to say</option>
     </select>
   </div>
@@ -306,16 +318,6 @@
       <option value="maybe">Maybe, depends on the lighting and if anyone brought snacks</option>
       <option value="no">No thank you</option>
     </select>
-  </div>
-
-  <div class="field">
-    <label for="email">Email Address</label>
-    <input type="email" id="email" placeholder="you@example.com" />
-  </div>
-
-  <div class="field">
-    <label for="phone">Phone Number</label>
-    <input type="tel" id="phone" placeholder="e.g. 555-123-4567" />
   </div>
 
   <div class="divider"></div>
