--- a/age-gate.html
+++ b/age-gate.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Dr<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -96,7 +96,7 @@
   <h1>We make dating feel <span class="green">organic</span>.</h1>
 
   <div class="description">
-    We built Le Libido to bring back <span class="blue">spontaneity</span> and <span class="red">serendipity</span> to dating.
+    We built Le Libido to bring <span class="blue">spontaneity</span> and <span class="red">serendipity</span> back to dating.
   </div>
 
   <div class="question">Are you 18 or older?</div>
