--- a/age-gate.html
+++ b/age-gate.html
@@ -11,12 +11,12 @@ Dr<!DOCTYPE html>
       --red: #950606;
       --blue: #064D95;
       --green: #06954E;
-      --black: #0d0d0d;
+      --charcoal gray: #1a1a1a;
     }
 
     body {
       margin: 0;
-      background-color: var(--black);
+      background-color: var(--charcoal gray);
       font-family: 'Montserrat', sans-serif;
       color: white;
       display: flex;
