--- a/age-gate.html
+++ b/age-gate.html
@@ -11,12 +11,11 @@ Dr<!DOCTYPE html>
       --red: #950606;
       --blue: #064D95;
       --green: #06954E;
-      --charcoal gray: #1a1a1a;
     }
 
     body {
       margin: 0;
-      background-color: var(--charcoal gray);
+      background-color: #1a1a1a;
       font-family: 'Montserrat', sans-serif;
       color: white;
       display: flex;
