--- a/age-gate.html
+++ b/age-gate.html
@@ -85,25 +85,18 @@
 
     .green { color: var(--green); font-weight: 600; }
 
-    .blue-glow {
-      color: var(--red);
+    .spontaneity {
+      color: var(--blue);
       text-shadow: 0 0 8px var(--blue-glow), 0 0 14px var(--blue-glow);
       animation: glow-blue 3s ease-in-out infinite;
+      font-weight: 600;
     }
 
-    .pink-glow {
-      color: var(--blue);
+    .serendipity {
+      color: var(--red);
       text-shadow: 0 0 8px var(--pink-glow), 0 0 14px var(--pink-glow);
       animation: glow-pink 3s ease-in-out infinite;
-    }
-
-    @keyframes glow-pink {
-      0%, 100% {
-        text-shadow: 0 0 8px var(--pink-glow), 0 0 14px var(--pink-glow);
-      }
-      50% {
-        text-shadow: 0 0 2px var(--pink-glow), 0 0 5px var(--pink-glow);
-      }
+      font-weight: 600;
     }
 
     @keyframes glow-blue {
@@ -112,6 +105,15 @@
       }
       50% {
         text-shadow: 0 0 2px var(--blue-glow), 0 0 5px var(--blue-glow);
+      }
+    }
+
+    @keyframes glow-pink {
+      0%, 100% {
+        text-shadow: 0 0 8px var(--pink-glow), 0 0 14px var(--pink-glow);
+      }
+      50% {
+        text-shadow: 0 0 2px var(--pink-glow), 0 0 5px var(--pink-glow);
       }
     }
   </style>
@@ -126,7 +128,7 @@
   <h1>We make dating feel <span class="green">organic</span>.</h1>
 
   <div class="description">
-    We built Le Libido to bring back <span class="pink-glow">spontaneity</span> and <span class="blue-glow">serendipity</span> to dating.
+    We built Le Libido to bring back <span class="spontaneity">spontaneity</span> and <span class="serendipity">serendipity</span> to dating.
   </div>
 
   <div class="question">Are you 18 or older?</div>
