--- a/age-gate.html
+++ b/age-gate.html
@@ -11,14 +11,11 @@
       --red: #950606;
       --blue: #064D95;
       --green: #06954E;
-      --black: #1a1a1a;
-      --pink-glow: #ff91d3;
-      --blue-glow: #91d8ff;
     }
 
     body {
       margin: 0;
-      background-color: var(--black);
+      background-color: #1a1a1a;
       font-family: 'Montserrat', sans-serif;
       color: white;
       display: flex;
@@ -84,38 +81,8 @@
     }
 
     .green { color: var(--green); font-weight: 600; }
-
-    .spontaneity {
-      color: var(--blue);
-      text-shadow: 0 0 8px var(--blue-glow), 0 0 14px var(--blue-glow);
-      animation: glow-blue 3s ease-in-out infinite;
-      font-weight: 600;
-    }
-
-    .serendipity {
-      color: var(--red);
-      text-shadow: 0 0 8px var(--pink-glow), 0 0 14px var(--pink-glow);
-      animation: glow-pink 3s ease-in-out infinite;
-      font-weight: 600;
-    }
-
-    @keyframes glow-blue {
-      0%, 100% {
-        text-shadow: 0 0 8px var(--blue-glow), 0 0 14px var(--blue-glow);
-      }
-      50% {
-        text-shadow: 0 0 2px var(--blue-glow), 0 0 5px var(--blue-glow);
-      }
-    }
-
-    @keyframes glow-pink {
-      0%, 100% {
-        text-shadow: 0 0 8px var(--pink-glow), 0 0 14px var(--pink-glow);
-      }
-      50% {
-        text-shadow: 0 0 2px var(--pink-glow), 0 0 5px var(--pink-glow);
-      }
-    }
+    .blue { color: var(--blue); font-weight: 600; }
+    .red { color: var(--red); font-weight: 600; }
   </style>
 </head>
 <body>
@@ -128,7 +95,7 @@
   <h1>We make dating feel <span class="green">organic</span>.</h1>
 
   <div class="description">
-    We built Le Libido to bring back <span class="spontaneity">spontaneity</span> and <span class="serendipity">serendipity</span> to dating.
+    We built Le Libido to bring <span class="blue">spontaneity</span> and <span class="red">serendipity</span> back to dating.
   </div>
 
   <div class="question">Are you 18 or older?</div>
