--- a/age-gate.html
+++ b/age-gate.html
@@ -87,8 +87,8 @@
 </head>
 <body>
 
-  <!-- Replace this src with your actual logo file -->
-  <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
+  <!-- Updated logo path with proper quoting -->
+  <img src="centered logo lock up 1.png" alt="Le Libido Logo" class="logo" />
 
   <div class="slogan">FOREPLAY</div>
 
