--- a/age-gate.html
+++ b/age-gate.html
@@ -15,7 +15,7 @@
 
     body {
       margin: 0;
-      background-color: #1a1a1a;
+      background-color: #202020;
       font-family: 'Montserrat', sans-serif;
       color: white;
       display: flex;
@@ -87,15 +87,14 @@
 </head>
 <body>
 
-  <!-- Updated logo path with proper quoting -->
-  <img src="centered logo lock up 1.png" alt="Le Libido Logo" class="logo" />
+  <img src="le-libido-logo.PNG" alt="Le Libido Logo" class="logo" />
 
   <div class="slogan">FOREPLAY</div>
 
-  <h1>We make dating feel <span class="green">organic</span>.</h1>
+  <h1>We make dating feel <span class="green">organic</span></h1>
 
   <div class="description">
-    We built Le Libido to bring <span class="blue">spontaneity</span> and <span class="red">serendipity</span> back to dating.
+    Le Libido brings <span class="blue">spontaneity</span> and <span class="red">serendipity</span> back to dating.
   </div>
 
   <div class="question">Are you 18 or older?</div>
