--- a/age-gate.html
+++ b/age-gate.html
@@ -8,10 +8,10 @@
   <style>
     :root {
       --gold: #e1bf78;
-      --red: #c21818;      /* Brighter red for readability */
-      --blue: #0e5edb;     /* Brighter blue for readability */
+      --red: #FF4C71;       /* NEW red for better contrast */
+      --blue: #4CA8FF;      /* NEW blue for better contrast */
       --green: #06954E;
-      --background: #262626;  /* Slightly lighter than 202020 for visibility */
+      --background: #262626;
     }
 
     body {
@@ -26,12 +26,12 @@
       min-height: 100vh;
       padding: 40px 20px;
       border: 4px solid;
-      border-image: linear-gradient(to right, var(--red), var(--blue), var(--green)) 1;
+      border-image: linear-gradient(to right, #950606, #064D95, #06954E) 1;
     }
 
     .logo {
-      max-width: 280px;  /* Increased logo size */
-      margin-bottom: 40px;
+      max-width: 280px;
+      margin-bottom: 20px; /* Reduced space between logo and text */
     }
 
     h1 {
