--- a/age-gate.html
+++ b/age-gate.html
@@ -8,10 +8,10 @@
   <style>
     :root {
       --gold: #e1bf78;
-      --red: #FF4C71;       /* NEW red for better contrast */
-      --blue: #4CA8FF;      /* NEW blue for better contrast */
+      --red: #FF6A6A;       /* Serendipity */
+      --blue: #67B2FF;      /* Spontaneity */
       --green: #06954E;
-      --background: #262626;
+      --background: #000000;
     }
 
     body {
@@ -31,7 +31,7 @@
 
     .logo {
       max-width: 280px;
-      margin-bottom: 20px; /* Reduced space between logo and text */
+      margin-bottom: 8px; /* Tighter spacing between logo and headline */
     }
 
     h1 {
@@ -82,7 +82,7 @@
 
   <img src="le-libido-logo.PNG" alt="Le Libido Logo" class="logo" />
 
-  <h1>We make dating feel <span class="green">organic</span></h1>
+  <h1>Where dating feels <span class="green">organic</span></h1>
 
   <div class="description">
     Le Libido brings <span class="blue">spontaneity</span> and <span class="red">serendipity</span> back to dating.
