--- a/age-gate.html
+++ b/age-gate.html
@@ -8,8 +8,8 @@
   <style>
     :root {
       --gold: #e1bf78;
-      --red: #FF6A6A;       /* Serendipity */
-      --blue: #67B2FF;      /* Spontaneity */
+      --red: #FF6A6A;       /* for "serendipity" */
+      --blue: #67B2FF;      /* for "spontaneity" */
       --green: #06954E;
       --background: #000000;
     }
@@ -31,7 +31,7 @@
 
     .logo {
       max-width: 280px;
-      margin-bottom: 8px; /* Tighter spacing between logo and headline */
+      margin-bottom: 0px; /* Tightened spacing */
     }
 
     h1 {
@@ -39,7 +39,7 @@
       font-weight: 700;
       color: var(--gold);
       text-align: center;
-      margin-bottom: 20px;
+      margin: 12px 0 20px 0; /* Balanced spacing for alignment */
     }
 
     .description {
