--- a/age-gate.html
+++ b/age-gate.html
@@ -39,7 +39,7 @@
       font-weight: 700;
       color: var(--gold);
       text-align: center;
-      margin: 12px 0 20px 0; /* Balanced spacing for alignment */
+      margin: 12px 0 20px 0; /* Balanced spacing */
     }
 
     .description {
@@ -90,7 +90,7 @@
 
   <div class="question">Are you 18 or older?</div>
 
-  <button class="button" onclick="window.location.href='tap.html'">Yes, I’m 18+</button>
+  <button class="button" onclick="window.location.href='https://lelibido.com/entrance.html'">Yes, I’m 18+</button>
   <button class="button" onclick="window.location.href='https://www.google.com'">No, take me back</button>
 
 </body>
