--- a/entrance.html
+++ b/entrance.html
@@ -27,10 +27,14 @@
       border: 6px solid var(--green);
     }
 
+    .logo {
+      max-width: 140px;
+      margin-bottom: 30px;
+    }
+
     .gif-button {
       border: 6px solid var(--blue);
-      border-radius: 12px;
-      padding: 10px;
+      padding: 0;
       display: inline-block;
       cursor: pointer;
       transition: transform 0.2s ease;
@@ -42,10 +46,10 @@
 
     .gif-button img {
       display: block;
-      max-width: 300px;
+      max-width: 480px;
       width: 100%;
       height: auto;
-      border-radius: 8px;
+      margin: 0;
     }
 
     .caption {
@@ -63,6 +67,8 @@
   </style>
 </head>
 <body>
+
+  <img src="golden-Le-Libido–logo.PNG" alt="Le Libido Logo" class="logo" />
 
   <a href="https://lelibido.com/quiz-new.html" class="gif-button">
     <img src="golden-ass-uniform.GIF" alt="Tap That Ass to Enter">
