--- a/entrance.html
+++ b/entrance.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Le Libido – Tap to Enter</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
   <style>
     :root {
       --gold: #e1bf78;
@@ -21,15 +21,15 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
       min-height: 100vh;
-      padding: 40px 20px;
+      padding: 60px 20px 40px;
       border: 6px solid var(--green);
     }
 
     .logo {
       max-width: 140px;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
     }
 
     .gif-button {
@@ -54,9 +54,10 @@
 
     .caption {
       font-size: 1.2rem;
-      margin-top: 20px;
+      margin-top: 18px;
       text-decoration: none;
       color: var(--gold);
+      font-style: italic;
       font-weight: 600;
       transition: opacity 0.3s ease;
     }
@@ -68,7 +69,7 @@
 </head>
 <body>
 
-  <img src="golden-Le-Libido–logo.PNG" alt="Le Libido Logo" class="logo" />
+  <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
 
   <a href="https://lelibido.com/quiz-new.html" class="gif-button">
     <img src="golden-ass-uniform.GIF" alt="Tap That Ass to Enter">
