--- a/entrance.html
+++ b/entrance.html
@@ -75,7 +75,7 @@
     <img src="golden-ass-uniform.GIF" alt="Tap That Ass to Enter">
   </a>
 
-  <a href="https://lelibido.com/quiz-new.html" class="caption">Tap that ass to enter</a>
+  <a href="https://lelibido.com/quiz-new.html" class="caption">Tap that ASS to enter</a>
 
 </body>
 </html>
