--- a/Where-to-date.html
+++ b/Where-to-date.html
@@ -7,9 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
     :root {
-      --gold-dark: #2b1f0e;
-      --gold-light: #c49c56;
-      --gold-text: #e1bf78;
+      --gold: #e1bf78;
       --red: #950606;
       --blue: #064D95;
       --green: #06954E;
@@ -17,57 +15,58 @@
 
     body {
       margin: 0;
-      background-color: var(--gold-dark);
+      padding: 30px 20px;
+      background-color: #000000;
       font-family: 'Montserrat', sans-serif;
-      color: var(--gold-text);
+      color: white;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
       min-height: 100vh;
-      padding: 40px 20px;
-      border: 4px solid var(--gold-light);
+      border: 4px solid;
+      border-image: linear-gradient(to right, var(--red), var(--blue), var(--green)) 1;
+      box-sizing: border-box;
     }
 
     .logo {
-      max-width: 140px;
-      margin-bottom: 30px;
+      max-width: 120px;
+      margin-bottom: 10px;
     }
 
     h1 {
       font-size: 2rem;
       font-weight: 700;
-      margin-bottom: 10px;
+      color: var(--gold);
       text-align: center;
-      position: relative;
+      margin: 10px 0 30px 0;
     }
 
-    h1::after {
-      content: '';
-      display: block;
-      height: 4px;
-      width: 100%;
-      margin-top: 10px;
-      background: linear-gradient(to right, var(--red), var(--blue), var(--green));
+    .button-container {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      align-items: center;
     }
 
     .button {
       background-color: transparent;
-      color: var(--gold-text);
-      border: 3px solid;
-      border-image: linear-gradient(to right, var(--red), var(--blue), var(--green)) 1;
-      padding: 14px 30px;
+      color: var(--gold);
+      border: 2px solid var(--gold);
+      padding: 14px 28px;
       font-size: 1rem;
       font-weight: 600;
-      margin: 20px;
-      cursor: pointer;
       border-radius: 8px;
-      transition: transform 0.2s ease, background-color 0.3s ease;
+      cursor: pointer;
+      transition: all 0.2s ease;
+      width: 240px;
+      text-align: center;
     }
 
     .button:hover {
       transform: scale(1.05);
       background-color: rgba(255, 255, 255, 0.05);
+      box-shadow: 0 0 8px #e1bf78aa;
     }
   </style>
 </head>
@@ -77,8 +76,10 @@
 
   <h1>Where do you want to date?</h1>
 
-  <button class="button" onclick="window.location.href='/coming-soon.html'">In a Le Libido venue</button>
-  <button class="button" onclick="window.location.href='/pwa-download.html'">Date on the go</button>
+  <div class="button-container">
+    <button class="button" onclick="window.location.href='coming-soon.html'">In a Le Libido venue</button>
+    <button class="button" onclick="window.location.href='pwa-download.html'">Date on the go</button>
+  </div>
 
 </body>
 </html>
