--- a/Where-to-date.html
+++ b/Where-to-date.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Where Do You Want to Date?</title>
+  <title>Where to Date – Le Libido</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -15,58 +15,90 @@
 
     body {
       margin: 0;
-      padding: 30px 20px;
-      background-color: #000000;
       font-family: 'Montserrat', sans-serif;
-      color: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      min-height: 100vh;
-      border: 4px solid;
-      border-image: linear-gradient(to right, var(--red), var(--blue), var(--green)) 1;
-      box-sizing: border-box;
+      background: linear-gradient(-45deg, var(--red), var(--blue), var(--green), var(--blue), var(--red));
+      background-size: 400% 400%;
+      animation: gradientShift 30s ease infinite;
+      color: var(--gold);
+      text-align: center;
+      padding: 40px 20px 60px;
+      border: 4px solid var(--gold);
+    }
+
+    @keyframes gradientShift {
+      0% { background-position: 0% 50%; }
+      25% { background-position: 50% 100%; }
+      50% { background-position: 100% 50%; }
+      75% { background-position: 50% 0%; }
+      100% { background-position: 0% 50%; }
     }
 
     .logo {
-      max-width: 120px;
-      margin-bottom: 10px;
+      max-width: 140px;
+      margin: 0 auto 25px;
+      display: block;
     }
 
     h1 {
-      font-size: 2rem;
+      font-size: 2.4rem;
+      margin-bottom: 40px;
       font-weight: 700;
       color: var(--gold);
-      text-align: center;
-      margin: 10px 0 30px 0;
     }
 
     .button-container {
       display: flex;
       flex-direction: column;
-      gap: 20px;
       align-items: center;
+      gap: 20px;
+      margin-bottom: 35px;
     }
 
-    .button {
+    .option-button {
       background-color: transparent;
-      color: var(--gold);
       border: 2px solid var(--gold);
-      padding: 14px 28px;
-      font-size: 1rem;
+      color: var(--gold);
+      padding: 16px 28px;
+      font-size: 1.1rem;
       font-weight: 600;
-      border-radius: 8px;
+      border-radius: 10px;
       cursor: pointer;
-      transition: all 0.2s ease;
-      width: 240px;
-      text-align: center;
+      transition: all 0.25s ease;
+      display: inline-flex;
+      align-items: center;
+      gap: 10px;
     }
 
-    .button:hover {
-      transform: scale(1.05);
-      background-color: rgba(255, 255, 255, 0.05);
-      box-shadow: 0 0 8px #e1bf78aa;
+    .option-button:hover {
+      background-color: var(--gold);
+      color: black;
+    }
+
+    .caption {
+      font-size: 1rem;
+      font-style: italic;
+      color: var(--gold);
+      max-width: 600px;
+      margin: 0 auto 40px;
+      line-height: 1.6;
+    }
+
+    footer {
+      font-size: 0.85rem;
+      color: var(--gold);
+      margin-top: 30px;
+    }
+
+    footer a {
+      color: var(--gold);
+      text-decoration: underline;
+    }
+
+    @media (min-width: 600px) {
+      .button-container {
+        flex-direction: row;
+        justify-content: center;
+      }
     }
   </style>
 </head>
@@ -77,9 +109,21 @@
   <h1>Where do you want to date?</h1>
 
   <div class="button-container">
-    <button class="button" onclick="window.location.href='coming-soon.html'">In a Le Libido venue</button>
-    <button class="button" onclick="window.location.href='pwa-download.html'">Date on the go</button>
+    <button class="option-button" onclick="window.location.href='coming-soon.html'">
+      🎪 In a Le Libido Venue
+    </button>
+    <button class="option-button" onclick="window.location.href='download-app.html'">
+      📍 Date on the Go
+    </button>
   </div>
+
+  <div class="caption">
+    Meet someone as wild, adventurous, or romantic as you are. Step into a Le Libido venue for a night of laughter, lust, and love, or take the magic with you, wherever you go.
+  </div>
+
+  <footer>
+    © 2025 Le Libido. All rights reserved. | <a href="/legal.html">Legal Notice</a>
+  </footer>
 
 </body>
 </html>
