--- a/Where-to-date.html
+++ b/Where-to-date.html
@@ -15,38 +15,19 @@
 
     body {
       margin: 0;
-      padding: 0;
       font-family: 'Montserrat', sans-serif;
       color: var(--gold);
       text-align: center;
-      height: 100vh;
-      overflow-x: hidden;
-      overflow-y: auto;
-      background-color: black;
-      position: relative;
+      animation: backgroundCycle 30s linear infinite;
     }
 
-    .color-layer {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: -1;
-      animation: fadeLoop 24s infinite;
-      opacity: 0;
-      transition: opacity 3s ease-in-out;
-    }
-
-    .color1 { background-color: #950606; animation-delay: 0s; }
-    .color2 { background-color: #064D95; animation-delay: 6s; }
-    .color3 { background-color: #06954E; animation-delay: 12s; }
-    .color4 { background-color: #064D95; animation-delay: 18s; }
-
-    @keyframes fadeLoop {
-      0% { opacity: 1; }
-      20% { opacity: 1; }
-      25% { opacity: 0; }
-      100% { opacity: 0; }
+    @keyframes backgroundCycle {
+      0%   { background-color: var(--red); }
+      20%  { background-color: var(--blue); }
+      40%  { background-color: var(--green); }
+      60%  { background-color: var(--blue); }
+      80%  { background-color: var(--red); }
+      100% { background-color: var(--red); }
     }
 
     .container {
@@ -117,7 +98,7 @@
       z-index: 99;
       left: 0; top: 0;
       width: 100%; height: 100%;
-      background-color: rgba(0, 0, 0, 0.8);
+      background-color: rgba(0, 0, 0, 0.85);
       align-items: center;
       justify-content: center;
     }
@@ -170,12 +151,6 @@
   </style>
 </head>
 <body>
-
-  <!-- Animated background layers -->
-  <div class="color-layer color1"></div>
-  <div class="color-layer color2"></div>
-  <div class="color-layer color3"></div>
-  <div class="color-layer color4"></div>
 
   <div class="container">
     <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
